--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-11-09 21:21+0000\n"
+"POT-Creation-Date: 2021-11-09 21:32+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Nyaruka <info@textit.in>, 2021\n"
 "Language-Team: Spanish (https://www.transifex.com/rapidpro/teams/226/es/)\n"
@@ -3825,14 +3825,20 @@ msgstr "Debe especificar al menos un día de la semana."
 msgid "English"
 msgstr "Inglés"
 
-msgid "Portuguese"
-msgstr "Portugués"
+msgid "Czech"
+msgstr ""
+
+msgid "Spanish"
+msgstr "Español"
 
 msgid "French"
 msgstr "Francés"
 
-msgid "Spanish"
-msgstr "Español"
+msgid "Mongolian"
+msgstr ""
+
+msgid "Portuguese"
+msgstr "Portugués"
 
 msgid "Russian"
 msgstr "ruso"
