--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-11-09 21:21+0000\n"
+"POT-Creation-Date: 2021-11-09 21:32+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2021\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -3824,14 +3824,20 @@ msgstr "Vous devez préciser au moins un jour de la semaine."
 msgid "English"
 msgstr "Anglais"
 
-msgid "Portuguese"
-msgstr "Portugais"
+msgid "Czech"
+msgstr ""
+
+msgid "Spanish"
+msgstr "Espanol"
 
 msgid "French"
 msgstr "Français"
 
-msgid "Spanish"
-msgstr "Espanol"
+msgid "Mongolian"
+msgstr ""
+
+msgid "Portuguese"
+msgstr "Portugais"
 
 msgid "Russian"
 msgstr "Russe"
