--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-11-09 21:21+0000\n"
+"POT-Creation-Date: 2021-11-09 21:32+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -3840,14 +3840,20 @@ msgstr ""
 msgid "English"
 msgstr "Английский"
 
-msgid "Portuguese"
-msgstr "Португальский "
+msgid "Czech"
+msgstr ""
+
+msgid "Spanish"
+msgstr "Испанский "
 
 msgid "French"
 msgstr "Французский "
 
-msgid "Spanish"
-msgstr "Испанский "
+msgid "Mongolian"
+msgstr ""
+
+msgid "Portuguese"
+msgstr "Португальский "
 
 msgid "Russian"
 msgstr "Русский"
