--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-11-09 21:32+0000\n"
+"POT-Creation-Date: 2021-11-11 19:13+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Nyaruka <info@textit.in>, 2021\n"
 "Language-Team: Spanish (https://www.transifex.com/rapidpro/teams/226/es/)\n"
@@ -3826,7 +3826,7 @@ msgid "English"
 msgstr "Inglés"
 
 msgid "Czech"
-msgstr ""
+msgstr "Checo"
 
 msgid "Spanish"
 msgstr "Español"
@@ -3835,7 +3835,7 @@ msgid "French"
 msgstr "Francés"
 
 msgid "Mongolian"
-msgstr ""
+msgstr "Mongol"
 
 msgid "Portuguese"
 msgstr "Portugués"
